wgsl_bindgen/src/snapshots/write_runtime_sized_array.snap
---
source: wgsl_bindgen/src/structs.rs
---
#[repr(C)]
#[derive(Debug, PartialEq, Clone, encase :: ShaderType)]
pub struct RtsStruct {
  pub other_data: i32,
  #[size(runtime)]
  pub the_array: Vec<u32>,
}
impl RtsStruct {
  pub const fn new(other_data: i32, the_array: Vec<u32>) -> Self {
    Self {
      other_data,
      the_array,
    }
  }
}
