wgsl_bindgen/src/snapshots/write_shorter_constructor.snap
---
source: wgsl_bindgen/src/structs.rs
---
#[repr(C, align(8))]
#[derive(Debug, PartialEq, Clone, Copy)]
pub struct Uniform {
  #[doc = "offset: 0, size: 8, type: `vec2<f32>`"]
  pub position_data: glam::Vec2,
}
pub const fn Uniform(position_data: glam::Vec2) -> Uniform {
  Uniform { position_data }
}
const UNIFORM_ASSERTS: () = {
  assert!(std::mem::offset_of!(Uniform, position_data) == 0);
  assert!(std::mem::align_of::<Uniform>() == 8);
  assert!(std::mem::size_of::<Uniform>() == 8);
};
unsafe impl bytemuck::Zeroable for Uniform {}
unsafe impl bytemuck::Pod for Uniform {}
